apps/jhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: jhub
    meta.helm.sh/release-namespace: af
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_max_body_size 0;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
  name: jhubaas
  namespace: af
spec:
  rules:
  - host: cms-it-hub.cloud.cnaf.infn.it
    http:
      paths:
      - backend:
          service:
            name: proxy-public
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cms-it-hub.cloud.cnaf.infn.it
    secretName: af-tls-secret
